searching api returns correct results

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,11 @@
       data-web-components
       async
     ></script>
+    <!-- <script
+      src="https://js-cdn.music.apple.com/musickit/v3/musickit.js"
+      data-web-components
+      async
+    ></script> -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
