--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <script
+    <!-- <script
       src="https://js-cdn.music.apple.com/musickit/v1/musickit.js"
-      data-web-components
       async
-    ></script>
+    ></script> -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
